# orbital

./: .gitignore  README.md  docker-compose.yml  testing.md
.github/workflows/: publish-engine.yml  tests.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.DB  package-lock.json  package.json  prisma.config.ts
backend/prisma/: schema.prisma
backend/prisma/migrations/20260526142027/: migration.sql
backend/scripts/: clean-api-keys.ts  copy_down_sql.sh
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  main.ts  prisma.service.ts
backend/src/api-keys/: api-key.controller.spec.ts  api-key.controller.ts  api-key.module.ts  api-key.service.spec.ts  api-key.service.ts
backend/src/auth/: auth.module.ts  clerk-auth.guard.ts  jwt.strategy.ts  supabase-auth.guard.spec.ts  supabase-auth.guard.ts
backend/src/index-prices/: historical-data.service.spec.ts  historical-data.service.ts  index-prices.controller.ts  index-prices.module.ts  index-prices.service.spec.ts  index-prices.service.ts  price-store.ts
backend/src/news/: news.controller.spec.ts  news.controller.ts  news.module.ts  news.service.spec.ts  news.service.ts
backend/src/news/types/: news.ts
backend/src/trading/: trading-engine.service.ts  trading.controller.spec.ts  trading.controller.ts  trading.module.ts
backend/src/users/: users.controller.spec.ts  users.controller.ts  users.module.ts  users.service.spec.ts  users.service.ts
backend/test/: api-key.e2e-spec.ts  app.e2e-spec.ts  trading.e2e-spec.ts
bots/: .env.example  README.md  lib.py  main.py  market_maker.py  mean_reverter.py  momentum.py  pyproject.toml  random_walker.py  run_all.sh  taker.py
data/l1_daily_10y/: ES.parquet  EWH.parquet  EWJ.parquet  EWY.parquet  FEZ.parquet  HSI.parquet  KOSPI.parquet  NIKKEI.parquet  NKD.parquet  NQ.parquet  README.md  RTY.parquet  SPY.parquet  STOXX50.parquet  YM.parquet  _ALL.parquet
data/l1_minute_2y/: README.md
frontend/: .env.example  .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/public/engine-docs/: api.md  openapi.yaml
frontend/src/: middleware.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/config-generator/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: highlight.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: AuthModal.tsx  BubblesIcon.tsx  UserSyncer.tsx
frontend/src/dashboard/: AddServerModal.test.tsx  AddServerModal.tsx  ApiKeyBadge.tsx  Backtester.tsx  BigTrades.tsx  CustomDropdown.tsx  GlobalTradeTicker.tsx  Header.tsx  IndicesPanel.tsx  Leaderboard.tsx  MyTrades.tsx  NewsArchiveModal.tsx  NewsFeed.tsx  OrderBook.tsx  PnLCharts.tsx  PythonCodeEditor.tsx  ReturnsChart.tsx  SimulatedBots.tsx  orderBookState.test.ts  orderBookState.ts  symbols.ts
frontend/src/hooks/: useApiKey.test.tsx  useApiKey.ts  useCurrentServer.test.tsx  useCurrentServer.ts  useEngineStream.ts  useEngineUserId.ts  useOnboarding.ts  useUserSync.ts
frontend/src/lib/: auth.tsx  supabase.ts
frontend/src/onboarding/: Onboarding.tsx  OnboardingTour.tsx  steps.ts
frontend/src/services/: apiKeys.ts  botControl.ts  engineMe.ts  engineStream.test.ts  engineStream.ts  engineUrl.test.ts  engineUrl.ts  mockData.ts  news.ts  symbols.test.ts  symbols.ts
frontend/src/services/backtest/: historical.ts  pythonStrategy.test.ts  pythonStrategy.ts  runner.test.ts  runner.ts  types.ts
frontend/src/ui/: BubblesIcon.tsx  Card.tsx
scripts/: gen_l1_minute_from_hourly.py  gen_l1_parquet.py
trading_engine/: .dockerignore  .env.example  CMakeLists.txt  Dockerfile  Makefile
trading_engine/bench/: engine_bench.cpp  ipc_bench.cpp
trading_engine/docs/site/: index.html  styles.css
trading_engine/scripts/: build-image.sh  bundle_docs.py  server-2020.json  server.docker.json  server.json  server.json.example  start-private-server.sh
trading_engine/src/: main.cpp  public_api.hpp
trading_engine/src/auth/: api_key_authenticator.cpp  api_key_authenticator.hpp
trading_engine/src/book/: order.hpp  order_book.cpp  order_book.hpp  order_index.hpp  price_level.hpp
trading_engine/src/common/: concepts.hpp  config.cpp  config.hpp  http_fetch.cpp  http_fetch.hpp  log.hpp  object_pool.hpp  sha1.hpp  spsc_queue.hpp  time.hpp  types.hpp
trading_engine/src/engine/: event_bus.hpp  events.hpp  matching_engine.cpp  matching_engine.hpp  sequencer.cpp  sequencer.hpp
trading_engine/src/feed/: index_price_feed.cpp  index_price_feed.hpp  index_price_store.hpp
trading_engine/src/market_maker/: mm_bot.cpp  mm_bot.hpp
trading_engine/src/news_bot/: gemini_client.cpp  gemini_client.hpp  news_analyzer.cpp  news_analyzer.hpp  news_bot.cpp  news_bot.hpp
trading_engine/src/persistence/: sqlite_store.cpp  sqlite_store.hpp
trading_engine/src/server/: bot_tracker.cpp  bot_tracker.hpp  dispatcher.cpp  dispatcher.hpp  docs_bundle.hpp  market_flow.cpp  market_flow.hpp  metrics.hpp  position_tracker.cpp  position_tracker.hpp  protocol.cpp  protocol.hpp  recent_trades.hpp  rest_handlers.cpp  rest_handlers.hpp  session.cpp  session.hpp  snapshot_store.cpp  snapshot_store.hpp  user_fills.hpp  ws_frame.cpp  ws_frame.hpp  ws_server.cpp  ws_server.hpp
trading_engine/tests/: auth_test.cpp  matching_engine_test.cpp  mpsc_ring_test.cpp  order_book_test.cpp  protocol_test.cpp  session_test.cpp  ws_frame_test.cpp
